Fixed clipping of icon. 	modified:   .config/waybar/style.css

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -90,6 +90,7 @@ window#waybar {
 /* IDLE INHIBITOR WIDGET */
 #idle_inhibitor {
   color: @thm-grey;
+  padding-right: 10px;
 }
 
 #idle_inhibitor.activated {
